fixed dark mode issues within profile page

--- a/client/src/Profile.css
+++ b/client/src/Profile.css
@@ -169,12 +169,11 @@
   padding: 10px;
   margin-top: 8px;
   border-radius: 4px;
-  border: 1px solid var(--src-primary-outline);
   width: 100%;
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
   color: var(--text-color);
-  background-color: var(--white-100);
+  background-color: var(--background-color);
 }
 
 .profile-form span {
@@ -201,10 +200,19 @@
   background-color: var(--white-100);
 }
 
+.input-field, .height-dropdown {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  border: 1px solid var(--gray-400);
+  border-radius: 4px;
+  padding: 0.3rem;
+}
+
 .weight-input {
   display: flex;
   align-items: center;
   gap: 8px;
+  color: var(--text-color);
 }
 
 .lbs {
@@ -241,9 +249,9 @@
 }
 
 .btn-outline {
-  background-color: transparent;
-  border: 2px solid var(--btn-primary);
-  color: var(--btn-primary);
+  background-color: var(--btn-primary);
+  border: 1px solid var(--btn-primary-outline);
+  color: var(--btn-primary-text);
   padding: 12px 24px;
   border-radius: 4px;
   cursor: pointer;
